Fixed more news styling, Changed body css rules Body: line height increased to 1.3, font size reduced to 14 More news page: removed extra margins & hr, changed color of long desc

--- a/css/general.css
+++ b/css/general.css
@@ -49,8 +49,8 @@ body {
 	text-transform: none;
 	Letter-spacing: 0em;
 	word-spacing: 0em;
-	line-height: 1.2;
-	font-size:17px; /*13 for Trebuchet MS*/
+	line-height: 1.3;
+	font-size:14px; /*13 for Trebuchet MS*/
 }
 
 h1 {
