--- a/css/general_inner.css
+++ b/css/general_inner.css
@@ -49,8 +49,8 @@ body {
 	text-transform: none;
 	Letter-spacing: 0em;
 	word-spacing: 0em;
-	line-height: 1.2;
-	font-size:17px; /*13 for Trebuchet MS*/
+	line-height: 1.3;
+	font-size:14px; /*13 for Trebuchet MS*/
 }
 
 h1 {
@@ -193,7 +193,7 @@ a
 /*	width:640px; */
 	text-align:justify;
 	padding:5px;
-	font-size:17px;
+	font-size:14px;
 
 }
 #main_content h3
@@ -425,7 +425,7 @@ p{
 }
 .news_item_list
 {
-	margin:5px 10px;
+	margin-top:5px;
 }
 .news_item_list:hover
 {
@@ -439,6 +439,10 @@ p{
 {
 	padding:10px 10px;
 	color:#0C45A5;
+}
+.news_item_list_largedesc
+{
+    color:#6666FF;
 }
 .bold_heading
 {
